--- a/ANALYST_ASSESSMENT_CC.html
+++ b/ANALYST_ASSESSMENT_CC.html
@@ -38669,7 +38669,7 @@ memory usage: 179.0+ KB
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[62]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#</span>
@@ -38686,16 +38686,23 @@ memory usage: 179.0+ KB
 
 
 <div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_text output_error">
-<pre>
-<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
-<span class="ansi-red-fg">NameError</span>                                 Traceback (most recent call last)
-<span class="ansi-green-fg">&lt;ipython-input-1-bc20c5c6450f&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
-<span class="ansi-green-intense-fg ansi-bold">      1</span> <span class="ansi-red-fg">#</span>
-<span class="ansi-green-fg">----&gt; 2</span><span class="ansi-red-fg"> </span>top_page2 <span class="ansi-blue-fg">=</span> male<span class="ansi-blue-fg">[</span>male<span class="ansi-blue-fg">.</span>pageviews <span class="ansi-blue-fg">&gt;=</span> <span class="ansi-cyan-fg">130.0</span><span class="ansi-blue-fg">]</span>
-<span class="ansi-green-intense-fg ansi-bold">      3</span> top_page2<span class="ansi-blue-fg">.</span>info<span class="ansi-blue-fg">(</span><span class="ansi-blue-fg">)</span>
-
-<span class="ansi-red-fg">NameError</span>: name &#39;male&#39; is not defined</pre>
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>&lt;class &#39;pandas.core.frame.DataFrame&#39;&gt;
+Int64Index: 1093 entries, 124 to 19043
+Data columns (total 10 columns):
+date                1093 non-null int64
+new_date            1093 non-null datetime64[ns]
+Page_Title          1093 non-null object
+Site                1093 non-null category
+age                 1093 non-null category
+gender              1093 non-null category
+Source              1093 non-null category
+Medium              1093 non-null category
+pageviews           1093 non-null int64
+Unique Pageviews    1093 non-null int64
+dtypes: category(5), datetime64[ns](1), int64(3), object(1)
+memory usage: 57.3+ KB
+</pre>
 </div>
 </div>
 
